# entertainment-graph

./: .gitignore  COMPARISON_RESULTS.md  DEPLOYMENT.md  PHASE1_TASKS.md  PROGRESS.md  Procfile  README.md  ingest_all_movies.py  ingest_to_graphiti.py  railway.toml  requirements.txt  test_api.sh  test_deployed_api.py  test_graphiti_query.py  test_ingest.py  test_railway_api.sh
data/movies/: blade-runner-2049.json  dune-2021.json  her-2013.json  severance.json  the-office.json
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: MovieCard.tsx  SearchBar.tsx  SystemColumn.tsx
frontend/lib/: api.ts  types.ts
python/: .env.example  README.md  compare_systems.py  pyproject.toml  test_graphiti.py
python/src/entertainment_graph/: __init__.py  config.py  main.py
python/src/entertainment_graph/models/: __init__.py  movie.py  query.py
python/src/entertainment_graph/routers/: __init__.py  health.py  ingest.py  movies.py  query.py
python/src/entertainment_graph/services/: __init__.py  data_loader.py
python/src/entertainment_graph/systems/: __init__.py  base.py  graphiti_system.py  openmemory_system.py  pure_vector.py
specs/: README.md  frontend.md  overview.md  phase1.md
specs/decisions/: ADR-001-system-selection.md  ADR-002-agentic-retrieval.md
specs/systems/: graphiti.md  openmemory.md  pure_vector.md
